# nero

./: Cargo.toml  install_linux.sh  readme
crates/nero_bin/: Cargo.toml
crates/nero_bin/src/: cli.rs  main.rs  utils.rs
crates/nero_bin/src/cli/: args.rs  output.rs
crates/nero_bin/src/cmds/: run.rs
crates/nero_core/src/: ast.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  semantic.rs
crates/nero_requests/: Cargo.toml
crates/nero_requests/src/: executor.rs
dev/mock_server/: README.md  index.ts  package-lock.json  package.json
dev/sample/: simple_get.ns
dev/script/: simple_get.ns
example/: get_method.ns  syntax.ns
nero_bin/: Cargo.toml
nero_bin/src/: main.rs
nero_core/: Cargo.toml
nero_core/src/: ast.rs  lib.rs  parser.rs  resolver.rs  token.rs
nero_tests/: Cargo.toml
nero_tests/src/: lib.rs  utils.rs
syntax/: basic.ns  multi_request.ns  string_interpolation.ns
tests/: Cargo.toml
tests/src/: lib.rs
