[workspace]
members = [
    "crates/nero_core",
    "crates/nero_bin",
    "crates/nero_requests",
    "tests"
]
resolver = "3"

[workspace.dependencies]
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
reqwest = {version = "0.12.26", features = ["json"]}
serde_json = "1.0.145"
