[package]
name = "nero_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
nero_core = { path = "../nero_core" }
nero_requests = { path = "../nero_requests" }
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
reqwest = {workspace = true}
clap = {version = "4.5.53", features = ["derive"]}
colored = "3.0.0"
tabled =  "0.20.0"
anyhow = {workspace = true}
chrono = "0.4.42"

[[bin]]
name = "nero"
path = "./src/main.rs"
